# odoo-eval

./: .gitignore  MANIFEST.in  odoo-bin  pyproject.toml
addons/account/: __manifest__.py
addons/account/controllers/: download_docs.py  portal.py  terms.py
addons/account/data/: mail_template_data.xml
addons/account/demo/: account_demo.py
addons/account/i18n/: es_MX.po  hu.po  lt.po  lv.po  nb.po  pl.po  uk.po
addons/account/models/: account_account.py  account_account_tag.py  account_analytic_account.py  account_analytic_distribution_model.py  account_analytic_line.py  account_bank_statement.py  account_bank_statement_line.py  account_cash_rounding.py  account_code_mapping.py  account_full_reconcile.py  account_journal.py  account_journal_dashboard.py  account_move.py  account_move_line.py  account_move_line_tax_details.py  account_order_line_mixin.py  account_order_mixin.py  account_partial_reconcile.py  account_payment.py  account_payment_method.py  account_payment_term.py  account_reconcile_model.py  account_report.py  account_tax.py  chart_template.py  company.py  decimal_precision.py  digest.py  ir_actions_report.py  ir_attachment.py  ir_module.py  mail_message.py  onboarding_onboarding_step.py  partner.py  product.py  res_config_settings.py  res_currency.py  res_partner_bank.py  res_users.py  sequence_mixin.py  (+2 more)
addons/account/populate/: account_bank_statement.py  account_journal.py  account_move.py  account_payment.py  account_reconcile_model.py  res_company.py
addons/account/report/: account_invoice_report.py
addons/account/tests/: __init__.py  common.py  test_account_account.py  test_account_analytic.py  test_account_bank_statement.py  test_account_inalterable_hash.py  test_account_journal.py  test_account_journal_dashboard.py  test_account_move_date_algorithm.py  test_account_move_entry.py  test_account_move_in_invoice.py  test_account_move_in_refund.py  test_account_move_line_tax_details.py  test_account_move_out_invoice.py  test_account_move_out_refund.py  test_account_move_payments_widget.py  test_account_move_reconcile.py  test_account_move_send.py  test_account_payment.py  test_account_payment_duplicate.py  test_account_payment_register.py  test_account_tax.py  test_chart_template.py  test_company_branch.py  test_early_payment_discount.py  test_fiscal_position.py  test_invoice_tax_totals.py  test_invoice_taxes.py  test_ir_actions_report.py  test_mail_tracking_value.py  test_multivat.py  test_payment_term.py  test_portal_attachment.py  test_sequence_mixin.py  test_tax.py  test_tax_report.py  test_taxes_computation.py  test_taxes_tax_totals_summary.py  test_tour.py  test_transfer_wizard.py  (+1 more)
addons/account/views/: account_account_views.xml  account_journal_dashboard_view.xml  account_move_views.xml  account_payment_term_views.xml  account_payment_view.xml  partner_view.xml  report_invoice.xml  report_payment_receipt_templates.xml  res_company_views.xml
addons/account/wizard/: account_advance_payment.py  account_automatic_entry_wizard.py  account_move_reversal.py  account_move_send.py  account_payment_register.py  account_payment_register_views.xml  account_resequence.py  account_validate_account_move.py  accrued_orders.py  base_document_layout.py  setup_wizards.py
addons/account_check_printing/: __manifest__.py
addons/account_check_printing/data/: account_check_printing_data.xml
addons/account_check_printing/models/: account_journal.py  (+3 more)
addons/auth_passkey/: __manifest__.py
addons/auth_totp_mail/: __manifest__.py
addons/bus/: websocket.py
addons/contacts/: __manifest__.py
addons/hr_holidays/: __init__.py
addons/hr_timesheet/: __init__.py
addons/html_editor/: tools.py
addons/im_livechat/: __manifest__.py
addons/l10n_ar/: __init__.py
addons/l10n_au/: __manifest__.py
addons/l10n_de/: __manifest__.py
addons/l10n_ec_stock/: __init__.py  __manifest__.py
addons/l10n_es/: __manifest__.py
addons/l10n_es_edi_facturae/: xml_utils.py
addons/l10n_es_pos/: __init__.py
addons/l10n_extra_eu_oss/: __manifest__.py
addons/l10n_hu_edi/: __init__.py
addons/l10n_my_edi/: __manifest__.py
addons/l10n_ro_edi_stock/: __manifest__.py
addons/l10n_sg_ubl_pint/: __manifest__.py
addons/l10n_tr_nilvera/: __manifest__.py
addons/l10n_tr_nilvera_einvoice/: __manifest__.py
addons/mail/: __manifest__.py
addons/marketing_card/: __manifest__.py
addons/mrp/: __init__.py
addons/mrp_subcontracting/: __manifest__.py
addons/payment/: const.py  utils.py
addons/payment_adyen/: utils.py
addons/payment_mercado_pago/: const.py
addons/payment_nuvei/: const.py
addons/payment_razorpay_oauth/: __manifest__.py  const.py
addons/point_of_sale/: __manifest__.py
addons/portal/: __manifest__.py
addons/portal_rating/: __manifest__.py
addons/product/: __manifest__.py
addons/product_expiry/: __init__.py
addons/project/: __manifest__.py
addons/project_hr_expense/: __manifest__.py
addons/repair/: __init__.py
addons/sale_gelato/: __manifest__.py
addons/sale_pdf_quote_builder/: utils.py
addons/sale_project_stock/: __manifest__.py
addons/stock/: __manifest__.py
addons/test_website/: __manifest__.py
addons/web/: __manifest__.py
addons/web_editor/: __manifest__.py  tools.py
addons/website/: __init__.py  __manifest__.py  tools.py
addons/website_slides/: __manifest__.py
community/: pyproject.toml
odoo/: __init__.py  _base.py  api.py  fields.py  http.py  models.py  netsvc.py  release.py
odoo/_monkeypatches/: __init__.py
odoo/cli/: __init__.py  command.py  neutralize.py  obfuscate.py  populate.py  shell.py
odoo/modules/: db.py  graph.py  loading.py  module.py  neutralize.py  registry.py
odoo/osv/: expression.py
odoo/service/: common.py  db.py  model.py  security.py  server.py
odoo/tests/: autotags.py  common.py  form.py  pytest.py  test_module_operations.py
odoo/tools/: __init__.py  _monkeypatches.py  cloc.py  config.py  constants.py  convert.py  mail.py  misc.py  pdf.py  safe_eval.py  sql.py  translate.py
odoo/upgrade_code/: 17.5-01-rename-class.py  18.1-00-sql-constraint.py
setup/: odoo-wsgi.example.py
(+2860 files in other folders)
